🥨⬆️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
       <div class="result"></div>
     </div>
 
+    
+    <div class="scores" class="row">
+        <div>
+          <h4>User Score</h4>
+          <p class="userScore"></p>
+        </div>
+        <div>
+          <h4>Computer Score</h4>
+          <p class="computerScore"></p>
+        </div>
+      </div>
+    </div>
+
     <!-- Link JQuery here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- Link script.js here -->
